// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should generate sidebarData correctly > Should resolve structure in dir 1`] = `
{
  "/dir-negative-order/": [
    "",
    "file2",
    "file4",
    "file3",
    "file1",
  ],
  "/dir-no-order/": [
    "",
    "file1",
    "file2",
    "file3",
    "file4",
  ],
  "/dir/": [
    "",
    "file2",
    "file4",
    "/permalink.html",
    "/2000/01/01/permalinkpattern/",
    "file1",
  ],
  "/link/": [
    "",
    "file2",
    "file4",
    "file1",
  ],
  "/nested-dir/": [
    "",
    "file2",
    {
      "children": [
        "",
        "file2",
        {
          "children": [
            "",
            "file2",
            "file4",
            "file1",
          ],
          "collapsible": true,
          "icon": "dir-icon",
          "prefix": "nested-dir2/",
          "text": "Dir2",
        },
        "file4",
        {
          "children": [
            "file2",
            "file4",
            "file1",
          ],
          "collapsible": true,
          "prefix": "nested-no-readme2/",
          "text": "Nested No Readme2",
        },
        "file1",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "nested-dir1/",
      "text": "Dir1",
    },
    "file4",
    {
      "children": [
        "file2",
        "file4",
        {
          "children": [
            "file2",
            "file4",
            "file1",
          ],
          "collapsible": true,
          "prefix": "nested-no-readme2/",
          "text": "Nested No Readme2",
        },
        "file1",
      ],
      "collapsible": true,
      "prefix": "nested-no-readme1/",
      "text": "Nested No Readme1",
    },
    "file1",
  ],
  "/nested-dir/nested-dir1/": [
    "",
    "file2",
    {
      "children": [
        "",
        "file2",
        "file4",
        "file1",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "nested-dir2/",
      "text": "Dir2",
    },
    "file4",
    {
      "children": [
        "file2",
        "file4",
        "file1",
      ],
      "collapsible": true,
      "prefix": "nested-no-readme2/",
      "text": "Nested No Readme2",
    },
    "file1",
  ],
  "/options/": [
    "",
    "file2",
    "file4",
    "file1",
  ],
}
`;

exports[`should generate sidebarData correctly > Should resolve structure in group options 1`] = `
{
  "/nested-dir/nested-dir1/": [
    "",
    "file2",
    {
      "children": [
        "",
        "file2",
        "file4",
        "file1",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "nested-dir2/",
      "text": "Dir2",
    },
    "file4",
    {
      "children": [
        "file2",
        "file4",
        "file1",
      ],
      "collapsible": true,
      "prefix": "nested-no-readme2/",
      "text": "Nested No Readme2",
    },
    "file1",
  ],
}
`;

exports[`should generate sidebarData correctly > Should resolve structure in root 1`] = `
{
  "/": [
    "",
    {
      "children": [
        "",
        "file2",
        "file4",
        "/permalink.html",
        "/2000/01/01/permalinkpattern/",
        "file1",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "dir/",
      "text": "Dir",
    },
    {
      "children": [
        "",
        "file2",
        "file4",
        "file3",
        "file1",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "dir-negative-order/",
      "text": "Dir",
    },
    {
      "children": [
        "",
        "file1",
        "file2",
        "file3",
        "file4",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "dir-no-order/",
      "text": "Dir",
    },
    {
      "children": [
        "",
        "file3",
        "file2",
        "file1",
        "file4",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "dir-positive-order/",
      "text": "Dir",
    },
    {
      "children": [
        "",
        "file2",
        {
          "children": [
            "",
            "file2",
            {
              "children": [
                "",
                "file2",
                "file4",
                "file1",
              ],
              "collapsible": true,
              "icon": "dir-icon",
              "prefix": "nested-dir2/",
              "text": "Dir2",
            },
            "file4",
            {
              "children": [
                "file2",
                "file4",
                "file1",
              ],
              "collapsible": true,
              "prefix": "nested-no-readme2/",
              "text": "Nested No Readme2",
            },
            "file1",
          ],
          "collapsible": true,
          "icon": "dir-icon",
          "prefix": "nested-dir1/",
          "text": "Dir1",
        },
        "file4",
        {
          "children": [
            "file2",
            "file4",
            {
              "children": [
                "file2",
                "file4",
                "file1",
              ],
              "collapsible": true,
              "prefix": "nested-no-readme2/",
              "text": "Nested No Readme2",
            },
            "file1",
          ],
          "collapsible": true,
          "prefix": "nested-no-readme1/",
          "text": "Nested No Readme1",
        },
        "file1",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "nested-dir/",
      "text": "Dir",
    },
    {
      "children": [
        "",
        "file",
      ],
      "collapsible": true,
      "prefix": "dir-with-index/",
      "text": "Dir with Index",
    },
    {
      "children": [
        "file2",
        "file4",
        "file1",
      ],
      "collapsible": true,
      "icon": "my-icon",
      "link": "link/",
      "prefix": "link/",
      "text": "Dir with link",
    },
    {
      "children": [
        "",
        "file",
      ],
      "collapsible": true,
      "icon": "dir-icon",
      "prefix": "dir-with-lowercase-readme/",
      "text": "Dir with lowercase readme",
    },
    {
      "children": [
        "",
        "file2",
        "file4",
        "file1",
      ],
      "collapsible": true,
      "icon": "my-icon",
      "prefix": "options/",
      "text": "Dir with options",
    },
    {
      "children": [
        "",
        "file",
      ],
      "collapsible": true,
      "prefix": "dir-with-uppercase-index/",
      "text": "Dir with Uppercase Index",
    },
    {
      "children": [
        "component",
        "cut",
        "demo",
        "example",
        "link",
      ],
      "collapsible": true,
      "prefix": "excerpt/",
      "text": "Excerpt",
    },
  ],
}
`;
